--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 }
 
 dependencies {
+    implementation project(':library')
     implementation deps.kotlin.stdlib
     implementation deps.kotlin.coroutinesCore
     implementation deps.kotlin.coroutinesAndroid
