--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
     }
     dependencies {
         classpath deps.plugins.android_build_tools
+        classpath deps.plugins.maven_gradle
         classpath deps.plugins.google_services
         classpath deps.plugins.kotlin
         classpath deps.plugins.versions
